[package]
name = "neolink"
description = "A standards-compliant bridge to Reolink IP cameras"
version = "0.7.0-beta"
authors = ["George Hilliard <thirtythreeforty@gmail.com>", "Andrew King <sheepchaan@gmail.com>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[workspace]
members = [
  "crates/*",
]

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
byte-slice-cast = {version = "1.2.3", optional = true}
bytes = "1.11.1"
clap = { version = "4.6.0", features = ["derive", "cargo"] }
crossbeam-channel = {version = "0.5.15", optional = true}
dirs = {version = "6.0.0", optional = true}
env_logger = "0.11.9"
fcm-push-listener = {version = "4.1.1", optional = true}
futures = "0.3.32"
gstreamer = {version = "0.25.1", optional = true}
gstreamer-app = { version = "0.25.0", features = ["v1_20"], optional = true }
gstreamer-rtsp = { version = "0.25.0", features = ["v1_20"], optional = true }
gstreamer-rtsp-server = { version = "0.25.0", features = ["v1_20"], optional = true }
heck = "0.5.0"
log = { version = "0.4.29", features = [ "release_max_level_debug" ] }
md5 = {version = "0.8.0", optional = true}
neolink_core = { path = "crates/core", version = "0.7.0-beta" }
once_cell = "1.21.4"
quick-xml = { version = "0.39.2", features = ["serialize"] }
regex = "1.12.3"
rumqttc = "0.25.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "io-util", "tracing", "signal"] }
tokio-stream = "0.1.18"
tokio-util = { version = "0.7.18", features = ["full", "tracing"] }
toml = "1.0.7"
uuid = { version = "1.22.0", features = ["v4"] }
validator = {version="0.20.0", features = ["derive"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6.1"

[features]
default = ["gstreamer"]
gstreamer = [
  "dep:gstreamer",
  "dep:gstreamer-app",
  "dep:gstreamer-rtsp",
  "dep:gstreamer-rtsp-server",
  "dep:byte-slice-cast",
  "dep:crossbeam-channel"
]
pushnoti = [
  "dep:fcm-push-listener",
  "dep:dirs",
  "dep:md5"
]
