[package]
name = "neolink_core"
description = "Core services and structure for Reolink IP cameras"
version = "0.7.0-beta"
authors = ["George Hilliard <thirtythreeforty@gmail.com>", "Andrew King <sheepchaan@gmail.com>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[dependencies]
aes = "0.8.4"
bytes = "1.11.1"
cfb-mode = "0.8.2"
cookie-factory = "0.3.3"
crc32fast = "1.5.0"
crossbeam-channel = "0.5.15"
delegate = "0.13.5"
futures = "0.3.32"
get_if_addrs = "0.5.3"
lazy_static = "1.5.0"
log = "0.4.29"
md5 = "0.8.0"
nom = { version = "7.1.3", features = ["alloc"] }
quick-xml = { version = "0.39.2", features = ["serialize"] }
rand = "0.10.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
time = { version = "0.3.47", features = [ "macros", "parsing", "local-offset" ]}
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync", "time", "net"] }
tokio-util = { version = "0.7.18", features = ["full", "tracing"] }

[dev-dependencies]
assert_matches = "1.5.0"
env_logger = "0.11.9"
indoc = "2.0.7"
