[package]
name = "pushnoti"
version = "0.7.0-beta"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive", "cargo"] }
env_logger = "0.11.9"
fcm-push-listener = { version = "4.1.1" }
lazy_static = "1.5.0"
log = { version = "0.4.29", features = [ "release_max_level_debug" ] }
neolink_core = { path = "../core", version = "0.7.0-beta" }
once_cell = "1.21.4"
regex = "1.12.3"
serde = "1.0.228"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.0.7"
reqwest = "0.13.2"
tokio-stream = "0.1.18"
validator = { version = "0.20.0", features = ["derive"] }
